--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,21 +2,50 @@
     margin: 0;
     padding: 0;
 }
+.logo{
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo img{
+    width: 33%;
+    border: 3px solid white;
+    border-radius: 50px;
+}
 .navbar{
     display: flex;
 }
 .navlist{
-    width: 50%;
-    background-color: yellow;
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .navlist li{
-
+    list-style: none;
+    padding: 20px 25px;
 }
 nav li a{
-
+    text-decoration: none;
+    color: white;
+}
+nav li a:hover{
+    text-decoration: none;
+    color:grey;
 }
 .rightnav{
-    background-color: blueviolet;
     width: 50%;
     text-align: right;
+}
+#search{
+    padding: 5px;
+    font-size: 17px;
+    border: 2px solid grey;
+    border: 9px;
+}
+.background{
+    background: rgba(0, 0, 0, 0.5)url('Images/image3.jpg');
+    background-size: cover;
+    background-blend-mode: darken;
 }
