--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,14 +3,14 @@
     padding: 0;
 }
 .logo{
-    width: 20%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .logo img{
-    width: 33%;
-    border: 3px solid white;
+    width: 20%;
+    border: 1px solid white;
     border-radius: 50px;
 }
 .navbar{
@@ -42,10 +42,40 @@ nav li a:hover{
     padding: 5px;
     font-size: 17px;
     border: 2px solid grey;
-    border: 9px;
+    border-radius: 9px;
 }
 .background{
-    background: rgba(0, 0, 0, 0.5)url('Images/image3.jpg');
+    background: rgba(0, 0, 0, 0.7) url('/Images/image3.jpg');
     background-size: cover;
     background-blend-mode: darken;
+}
+.box-main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    max-width: 50%;
+    margin: auto;
+}
+.firstSection{
+    width: 100%;
+}
+.firsthalf{
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+}
+.secondhalf{
+    width: 30%;
+}
+.secondhalf img{
+    width: 70%;
+    padding: 1px 0px;
+    border: 1px solid white;
+    border-radius: 150px;
+    display: block;
+    margin: auto;
 }
