--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,6 +15,11 @@
 }
 .navbar{
     display: flex;
+    align-items: center;
+    justify-items: center;
+    position: sticky;
+    top: 0;
+    cursor: pointer;
 }
 .navlist{
     width: 70%;
@@ -50,32 +55,39 @@ nav li a:hover{
     background-blend-mode: darken;
 }
 .box-main{
+    height: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     max-width: 50%;
     margin: auto;
+
 }
 .firstSection{
-    width: 100%;
+    height: 100vh;
 }
 .firsthalf{
     width: 80%;
     display: flex;
-    justify-content: center;
     flex-direction: column;
-
+    justify-content: center;
 }
 .secondhalf{
     width: 30%;
 }
 .secondhalf img{
-    width: 70%;
-    padding: 4px 0px;
+    width:90%;
     border: 1px solid white;
     border-radius: 200px;
     display: block;
     margin: auto;
+
+}
+.textbig{
+    font-size: 40px;
+}
+.textsmall{
+    font-size: 20px;
 }
