Modification of Search and buttons

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,8 +42,9 @@ nav li a:hover{
 .rightnav{
     width: 50%;
     text-align: right;
+    padding: 20px;
 }
-#search{
+#Search{
     padding: 5px;
     font-size: 17px;
     border: 2px solid grey;
@@ -55,7 +56,7 @@ nav li a:hover{
     background-blend-mode: darken;
 }
 .box-main{
-    height: 80%;
+    height: 70%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -78,16 +79,25 @@ nav li a:hover{
     width: 30%;
 }
 .secondhalf img{
-    width:90%;
-    border: 1px solid white;
+    width:100%;
+    border: 2px solid white;
     border-radius: 200px;
     display: block;
     margin: auto;
 
 }
 .textbig{
-    font-size: 40px;
+    font-size: 35px;
 }
 .textsmall{
-    font-size: 20px;
+    font-size: 15px;
+}
+.btn{
+    padding: 8px 20px;
+    margin: 7px 0px;
+    border: 2px solid white;
+    border-radius: 8px;
+    background: none;
+    color: white;
+    cursor: pointer;
 }
