--- a/CSS/style.css
+++ b/CSS/style.css
@@ -94,10 +94,14 @@ nav li a:hover{
 }
 .btn{
     padding: 8px 20px;
-    margin: 7px 0px;
+    margin: 7px 2px;
     border: 2px solid white;
     border-radius: 8px;
     background: none;
     color: white;
     cursor: pointer;
+}
+.btn-sm{
+    padding: 6px 10px;
+    vertical-align: middle;
 }
