--- a/CSS/style.css
+++ b/CSS/style.css
@@ -105,3 +105,9 @@ nav li a:hover{
     padding: 6px 10px;
     vertical-align: middle;
 }
+.secRight{
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
