--- a/CSS/style.css
+++ b/CSS/style.css
@@ -109,5 +109,7 @@ nav li a:hover{
     height: 500px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    max-width: 80%;
+    margin: auto;
 }
