--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,7 @@
     align-items: center;
 }
 .logo img{
-    width: 40%;
+    width: 70%;
     border: 1px solid white;
     border-radius: 30px;
 }
@@ -112,4 +112,7 @@ nav li a:hover{
     justify-content: space-evenly;
     max-width: 80%;
     margin: auto;
+}
+.paras{
+    padding: 0px 2px;
 }
