--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,300&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -112,6 +113,7 @@ nav li a:hover{
     justify-content: space-evenly;
     max-width: 80%;
     margin: auto;
+    font-family: 'ubuntu' sans-serif;
 }
 .secLeft{
     flex-direction: row-reverse;
