--- a/CSS/style.css
+++ b/CSS/style.css
@@ -121,3 +121,8 @@ nav li a:hover{
 .paras{
     padding: 0px 2px;
 }
+.thumbnail img{
+    width: 20%;
+    border: 2px solid black;
+    border-radius: 10%;
+}
