--- a/CSS/style.css
+++ b/CSS/style.css
@@ -124,5 +124,6 @@ nav li a:hover{
 .thumbnail img{
     width: 20%;
     border: 2px solid black;
-    border-radius: 10%;
+    border-radius: 80%;
+    margin-top: 20px;
 }
