--- a/CSS/style.css
+++ b/CSS/style.css
@@ -110,7 +110,7 @@ nav li a:hover{
     height: 500px;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     max-width: 80%;
     margin: auto;
     font-family: 'ubuntu' sans-serif;
@@ -122,8 +122,8 @@ nav li a:hover{
     padding: 0px 2px;
 }
 .thumbnail img{
-    width: 20%;
+    width: 30%;
     border: 2px solid black;
-    border-radius: 80%;
+    border-radius: 10%;
     margin-top: 20px;
 }
