--- a/CSS/AboutUsStyle.css
+++ b/CSS/AboutUsStyle.css
@@ -15,3 +15,12 @@
     color: white;
     font-size: 40px;
 }
+.border{
+    display: block;
+    margin: auto;
+    width: 160px;
+    height: 3px;
+    background: turquoise;
+    margin-bottom: 40px;
+    
+}
