--- a/CSS/AboutUsStyle.css
+++ b/CSS/AboutUsStyle.css
@@ -42,3 +42,23 @@
 .ps a:hover > img{
     filter: none;
 }
+.section{
+    width: 600px;
+    margin: auto;
+    font-size: 20px;
+    color: white;
+    text-align: justify; 
+    height: 0;
+    overflow: hidden;
+}
+.section:target{
+    height: auto;
+}
+.name{
+    display: block;
+    margin-bottom: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 22px;
+
+}
