--- a/CSS/AboutUsStyle.css
+++ b/CSS/AboutUsStyle.css
@@ -6,7 +6,7 @@
 .team-section{
     overflow: hidden;
     text-align: center;
-    background: #34495e;
+    background: #091929;
     padding: 60px;
 }
 .team-section h1{
