--- a/CSS/Login-style.css
+++ b/CSS/Login-style.css
@@ -17,7 +17,7 @@
     position: relative;
     margin: 6% auto;
     padding: 5px;
-    background: #589adb;
+    background: #b5d5f5;
     overflow: hidden;
 }
 .btn-box{
