--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: sans-serif ;
 }
 .logo{
     width: 10%;
@@ -10,7 +11,8 @@
     align-items: center;
 }
 .logo img{
-    width: 70%;
+    float: left;
+    width: 50%;
     border: 1px solid white;
     border-radius: 30px;
 }
@@ -21,27 +23,26 @@
     position: sticky;
     top: 0;
     cursor: pointer;
+    font-weight: bold;
 }
 .navlist{
-    width: 70%;
+    width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    font-size: large;
 }
 .navlist li{
     list-style: none;
-    padding: 20px 25px;
+    padding: 30px 60px;
 }
 nav li a{
     text-decoration: none;
-    color: white;
+    color: black;
 }
 nav li a:hover{
     text-decoration: none;
     color:grey;
 }
 .background{
-    background: rgba(0, 0, 0, 0.7) url('/Images/image3.jpg');
     background-size: cover;
     background-blend-mode: darken;
 }
