--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,12 +23,11 @@
     position: sticky;
     top: 0;
     cursor: pointer;
-    font-weight: bold;
 }
 .navlist{
     width: 100%;
     display: flex;
-    font-size: large;
+    font-size: larger;
 }
 .navlist li{
     list-style: none;
@@ -36,11 +35,11 @@
 }
 nav li a{
     text-decoration: none;
-    color: black;
+    color: rgb(0, 0, 0);
 }
 nav li a:hover{
     text-decoration: none;
-    color:grey;
+    color:rgb(102, 173, 255);
 }
 .background{
     background-size: cover;
