--- a/CSS/Login-style.css
+++ b/CSS/Login-style.css
@@ -34,7 +34,7 @@
     border: 0;
     outline: none;
     position: relative;
-    color:black;
+    color:white;
 }
 #btn{
     top: 0;
@@ -42,7 +42,7 @@
     position: absolute;
     width: 110px;
     height: 100%;
-    background: linear-gradient(to right,#589adb,#87abce);
+    background: linear-gradient(to right,#0e2842,#1b4c7c);
     border-radius: 30px;
     transition: .5s;
 }
