--- a/CSS/AboutUsStyle.css
+++ b/CSS/AboutUsStyle.css
@@ -94,3 +94,12 @@ hr {
     background: #091929;
     padding: 60px;
 }
+hr {
+    margin-top: 4rem;
+}
+.ContactUs h1{
+    text-transform: uppercase;
+    margin-bottom: 60px;
+    color: white;
+    font-size: 40px;
+}    
