--- a/CSS/AboutUsStyle.css
+++ b/CSS/AboutUsStyle.css
@@ -102,4 +102,25 @@ hr {
     margin-bottom: 60px;
     color: white;
     font-size: 40px;
+}
+#contact .contact{
+    flex-direction: column;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+#contact .contact-items{
+    width: 100%;
+}
+#contact .contact-item{
+    width: 80%;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
+    padding: 30px;
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0px 0px 18px 0 #0000002c;
 }    
