--- a/CSS/AboutUsStyle.css
+++ b/CSS/AboutUsStyle.css
@@ -109,7 +109,7 @@ hr {
     margin: 0 auto;
 }
 #contact .contact-items{
-    width: 100%;
+    width: 400px;
 }
 #contact .contact-item{
     width: 80%;
@@ -123,4 +123,17 @@ hr {
     align-items: center;
     flex-direction: column;
     box-shadow: 0px 0px 18px 0 #0000002c;
+    transition: .3s ease box-shadow;
+}
+#contact .contact-item:hover {
+    box-shadow: 0px 0px 5px 0 #0000002c;
+}
+#contact .icon{
+    width: 70px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+#contact .contact-info h1{
+    font-size: 2.5 rem;
+    font-weight: 500;
 }    
