about us modification

--- a/CSS/AboutUsStyle.css
+++ b/CSS/AboutUsStyle.css
@@ -103,19 +103,19 @@ hr {
     color: white;
     font-size: 40px;
 }
-#contact .contact{
+.contact{
+    background-color: #091929;
+}
+.contact{
     flex-direction: column;
     max-width: 1200px;
     margin: 0 auto;
 }
-#contact .contact-items{
+.contact-items{
     width: 400px;
 }
-.main{
-    background-color: #091929;
-}
-#contact .contact-item{
-    width: 80%;
+.contact-item{
+    width: 100%;
     padding: 20px;
     text-align: center;
     border-radius: 10px;
@@ -128,15 +128,15 @@ hr {
     box-shadow: 0px 0px 18px 0 #0000002c;
     transition: .3s ease box-shadow;
 }
-#contact .contact-item:hover {
+.contact-item:hover {
     box-shadow: 0px 0px 5px 0 #0000002c;
 }
-#contact .icon{
+.icon{
     width: 70px;
     margin: 0 auto;
     margin-bottom: 10px;
 }
-#contact .contact-info h1{
+.contact-info h1{
     font-size: 2.5 rem;
     font-weight: 500;
 }    
