--- a/CSS/AboutUsStyle.css
+++ b/CSS/AboutUsStyle.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    background-color: #091929;
 }
 .team-section{
     /* padding-bottom: 4rem; */
