--- a/CSS/AboutUsStyle.css
+++ b/CSS/AboutUsStyle.css
@@ -125,6 +125,7 @@ hr {
     flex-direction: column;
     box-shadow: 0px 0px 18px 0 #0000002c;
     transition: .3s ease box-shadow;
+    color: blanchedalmond;
 }
 .contact-item:hover {
     box-shadow: 0px 0px 5px 0 #0000002c;
