--- a/CSS/AboutUsStyle.css
+++ b/CSS/AboutUsStyle.css
@@ -125,7 +125,6 @@ hr {
     flex-direction: column;
     box-shadow: 0px 0px 18px 0 #0000002c;
     transition: .3s ease box-shadow;
-    color: blanchedalmond;
 }
 .contact-item:hover {
     box-shadow: 0px 0px 5px 0 #0000002c;
@@ -134,6 +133,7 @@ hr {
     width: 70px;
     margin: 0 auto;
     margin-bottom: 10px;
+    color: pink;
 }
 .contact-info h1{
     font-size: 2.5 rem;
