--- a/CSS/AboutUsStyle.css
+++ b/CSS/AboutUsStyle.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background-color: #091929;
+    
 }
 .team-section{
     /* padding-bottom: 4rem; */
@@ -125,6 +125,7 @@ hr {
     flex-direction: column;
     box-shadow: 0px 0px 18px 0 #0000002c;
     transition: .3s ease box-shadow;
+    box-decoration-break: slice;
 }
 .contact-item:hover {
     box-shadow: 0px 0px 5px 0 #0000002c;
