--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,6 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif ;
 }
 .logo{
     width: 10%;
@@ -47,6 +46,7 @@ nav li a img:hover{
 .background{
     background-size: cover;
     background-blend-mode: darken;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .content{
     height: 100%;
