--- a/CSS/CreateResume.css
+++ b/CSS/CreateResume.css
@@ -1,3 +1,13 @@
 #cv-form{
     display: none;
 }
+
+.my-img{
+    /*border: 1px solid red;*/
+    border-radius: 50%;
+    width: 200px;
+}
+
+.background{
+    
+}
