--- a/CSS/CreateResume.css
+++ b/CSS/CreateResume.css
@@ -2,6 +2,10 @@
     display: none;
 }*/
 
+#cv-template{
+    display: none;
+}
+
 .my-img{
     /*border: 1px solid red;*/
     border-radius: 50%;
